<resources>
    <string name="app_name">E-mandi</string>


    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="category_wheet">Wheet</string>
    <string name="expand_all">Expand All</string>
    <string name="category_Rice">Rice</string>
    <string name="category_pulse">Pulse</string>
    <string name="category_fruit">Fruits</string>
    <string name="category_others">Others</string>

</resources>